<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
--><!--
    Define the layout of the main activity's user interface.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <!--
        Define a layout containing the app status message area.
        Each label and message area has its own layout
    -->
    <LinearLayout
        android:id="@+id/status_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/app_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:padding="0dp"
            android:text="@string/app_status_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/app_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/unknown_string_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <!--
        Define a layout containing the connection status message area.
     -->
    <LinearLayout
        android:id="@+id/connection_status_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/connection_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:text="@string/connection_status_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/connection_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:text="@string/unknown_string_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <!--
        Define a layout containing the data entry fields
     -->
    <RelativeLayout
        android:id="@+id/pause_entry_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connection_status_layout"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pause_entry_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:text="@string/pause_entry_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!-- Editable text area for entering the time to pause before the start of the test -->
        <EditText
            android:id="@+id/pause_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/pause_entry_label"
            android:layout_toRightOf="@+id/pause_entry_label"
            android:inputType="number" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/send_interval_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pause_entry_layout"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/send_interval_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:text="@string/send_entry_label"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!-- Editable text area for entering the time to pause between each new Location -->
        <EditText
            android:id="@+id/send_interval_value"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/send_interval_label"
            android:layout_toRightOf="@+id/send_interval_label"
            android:inputType="number" />
    </RelativeLayout>

    <!--
        Control buttons
    -->
    <!-- Button that starts a single test run. When clicked, onStartOnceButtonClick is called. -->
    <Button
        android:id="@+id/start_once_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_interval_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/one_run_button_text"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    <!--
        Button that starts a continuous test run. When clicked, onStartContinuousButtonClick
        is called.
    -->
    <Button
        android:id="@+id/start_continuous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_once_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:enabled="true"
        android:text="@string/run_continuous_button_text"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    <!-- Button that stops a continuous test run. When clicked, onStopButtonClick is called. -->
    <Button
        android:id="@+id/stop_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_continuous_button"
        android:layout_centerHorizontal="true"
        android:text="@string/stop_test_button_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!--
        Indeterminate activity indicator. At the start of the app, it is invisible and it takes
        up no space in the layout. During a continuous test, the app switches the visibility of the
        widget to "visible".
     -->
    <ProgressBar
        android:id="@+id/testing_activity_indicator"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/stop_test_button"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>
